--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <aside>
                             <div class="aside-item" id="sobreMim">
                                 <h2>Sobre Mim</h2>
-                                <img src="img/fernandozanesco.jpg" alt="">
+                                <img src="img/civic.jpg" alt="">
                                 <h3>Fernando Zanesco Boeira</h3>
                                 <p>Nasci em 1976, tenho 2 irmãos mais velhos, criado em um a família tradicional na região metropolitana de Curitiba.
                                     Estudei o ensino fundamental e médio em escola pública, segui a carreira militar por 3 anos em um Batalhão de Infantaria.
