--- a/index.html
+++ b/index.html
@@ -73,11 +73,9 @@
                             <div class="aside-item" id="sobreMim">
                                 <h2>Sobre Mim</h2>
                                 <img src="img/WhatsApp Image 2024-03-10 at 22.37.12.jpeg alt="">
-                                <h3>Fernando Zanesco Boeira</h3>
-                                <p>Nasci em 1964, tenho 2 irmãos mais velhos, criado em um a família tradicional na região metropolitana de Curitiba.
-                                    Estudei o ensino fundamental e médio em escola pública, segui a carreira militar por 3 anos em um Batalhão de Infantaria.
-                                Sou formado em Tecnico de Segurança do Trabalho, Licenciatura Plena em Matemática e Engenharia Elétrica, pós graduado em Engenharia de Segurança
-                            do Trabalho, Ergonomia e Meio Ambiente.</p>
+                                <h3>Pablo Eduardo Miranda Dos Santos</h3>
+                                <p>Nasci em 2007, tenho 2 irmãos mais novos, criado em um a família tradicional na região metropolitana de Curitiba.
+                                    Completei o ensino fundamental e estou cursando terceiro ano do ensino médio em escola pública</p>
                             </div>
                             <div class="aside-item" id="sobreMim">
                                 <h2>Meus Hobbies</h2>
