--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <aside>
                             <div class="aside-item" id="sobreMim">
                                 <h2>Sobre Mim</h2>
-                                <img src="img/WhatsApp Image 2024-03-10 at 22.37.12.jpeg alt="">
+                                <img src="img/civic 3.jpeg" alt="">
                                 <h3>Pablo Eduardo Miranda Dos Santos</h3>
                                 <p>Nasci em 2007, tenho 2 irmãos mais novos, criado em um a família tradicional na região metropolitana de Curitiba.
                                     Completei o ensino fundamental e estou cursando terceiro ano do ensino médio em escola pública</p>
