--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
                     <div class="container-main">
                         <main>
                             <article>
-                                <h2>Viagem ao Chile</h2>
+                                <h2>Honda Civic 2010</h2>
                                 <span>Publicado: 03/03/2024</span>
-                                <img src="img/viagemchile.jpg" alt="">
+                                <img src="img/civic.jpg" alt="">
                                 <p>O Chile é um país de território comprido e estreito que se estende pelo extremo oeste da América do Sul, com mais de 6.000 km de litoral ao longo do Oceano Pacífico. Santiago, sua capital, fica localizada em um vale cercado pelos Andes e pelas montanhas da Cordilheira da Costa do Pacífico Sul. Nessa cidade, a Plaza de Armas, repleta de palmeiras, abriga a catedral neoclássica e o Museu de História Nacional. O imenso Parque Metropolitano tem piscinas, um jardim botânico e um zoológico!
 
                                 </p>
                                 <p>Fizemos essa viagem em Julho de 2023 onde passamos 06 dias incríveis, com experiência de uma nova cultura, culinária, paisagens visnumbrantes e principalmente muita neve!</p>
-                                <a href="https://www.visitchile.com.br/guias-chile/guia-de-viaje/sobre-chile/">Leia mais..</a>
+                                <a href="https://www.honda.com.br/sites/cbw/files/2016-08/Civic%202010.pdf">Leia mais..</a>
                             </article>
                             <article>
                                 <h2>Dia da Amazônia</h2>
