--- a/index.html
+++ b/index.html
@@ -38,7 +38,14 @@
                                 <h2>Honda Civic 2010</h2>
                                 <span>Publicado: 03/03/2024</span>
                                 <img src="img/civic.jpeg" alt="">
-                                <p>O Chile é um país de território comprido e estreito que se estende pelo extremo oeste da América do Sul, com mais de 6.000 km de litoral ao longo do Oceano Pacífico. Santiago, sua capital, fica localizada em um vale cercado pelos Andes e pelas montanhas da Cordilheira da Costa do Pacífico Sul. Nessa cidade, a Plaza de Armas, repleta de palmeiras, abriga a catedral neoclássica e o Museu de História Nacional. O imenso Parque Metropolitano tem piscinas, um jardim botânico e um zoológico!
+                                <p>O Honda Civic 2010 é um carro que conquistou muitos fãs ao longo dos anos devido à sua confiabilidade, estilo e desempenho. Com um design aerodinâmico e moderno, o Civic 2010 se destaca em termos de aparência e funcionalidade. Seu interior espaçoso e bem projetado oferece conforto tanto para o motorista quanto para os passageiros, tornando as viagens mais agradáveis.
+
+Sob o capô, o Civic 2010 pode vir equipado com um motor de quatro cilindros que oferece uma boa combinação de economia de combustível e potência. Sua dirigibilidade ágil e responsiva torna a condução em áreas urbanas e rodovias uma experiência prazerosa.
+
+Além disso, a reputação da Honda em termos de confiabilidade e durabilidade reflete-se no Civic 2010, tornando-o uma escolha popular no mercado de carros usados.
+
+Com sua combinação de estilo, desempenho e confiabilidade, o Honda Civic 2010 continua a ser uma opção atrativa para quem procura um carro compacto e eficiente.
+
 
                                 </p>
                                 <p>Fizemos essa viagem em Julho de 2023 onde passamos 06 dias incríveis, com experiência de uma nova cultura, culinária, paisagens visnumbrantes e principalmente muita neve!</p>
