--- a/index.html
+++ b/index.html
@@ -48,18 +48,26 @@ Com sua combinação de estilo, desempenho e confiabilidade, o Honda Civic 2010 
 
 
                                 </p>
-                                <p>Fizemos essa viagem em Julho de 2023 onde passamos 06 dias incríveis, com experiência de uma nova cultura, culinária, paisagens visnumbrantes e principalmente muita neve!</p>
+                        
                                 <a href="https://www.honda.com.br/sites/cbw/files/2016-08/Civic%202010.pdf">Leia mais..</a>
                             </article>
                             <article>
-                                <h2>Dia da Amazônia</h2>
+                                <h2>Hyundai Sonata 2012 </h2>
                                 <span>Publicado: 05/09/2023</span>
-                                <img src="img/amazonia.jpg" alt="">
-                                <p>Um dos patrimônios naturais mais valiosos de toda a humanidade e a maior reserva natural do planeta! A Floresta Amazônica é chave importante para a estabilidade climática planetária, ela influencia e impacta regiões que ultrapassam suas fronteiras. O bioma Amazônia abrange a maior bacia hidrográfica do mundo e a maior floresta tropical – a maior diversidade de fauna e flora do planeta!
+                                <img src="img/amaznia.jpg" alt="">
+                                <p>O Sonata é um sedã que tem conquistado admiradores ao longo dos anos devido ao seu design elegante, conforto e tecnologia embarcada. Com linhas fluidas e uma presença marcante, o Sonata combina sofisticação com um toque esportivo, atraindo olhares por onde passa.
+
+No interior, o Sonata oferece um ambiente espaçoso e repleto de comodidades, proporcionando conforto tanto para o motorista quanto para os passageiros. Além disso, a atenção aos detalhes e a qualidade dos materiais utilizados reforçam a sensação de requinte a bordo.
+
+Em termos de desempenho, o Sonata conta com opções de motores eficientes que oferecem boa potência e economia de combustível, tornando-o uma escolha equilibrada para quem busca um sedã versátil para o dia a dia.
+
+A tecnologia embarcada no Sonata também se destaca, com sistemas avançados de entretenimento, segurança e conectividade, proporcionando uma experiência moderna e conveniente aos ocupantes do veículo.
+
+Com sua combinação de estilo, conforto e tecnologia, o Sonata se destaca como uma opção atraente no segmento de sedãs médios.
 
                                 </p>
-                                <p>Todo esse ecossistema está ameaçado, é preciso unir forças, dar voz aos indígenas, aos povos tradicionais da floresta! Defender a Amazônia é defender a vida!</p>
-                                <a href="https://mundoeducacao.uol.com.br/datas-comemorativas/05-setembro-dia-amazonia.htm">Leia mais..</a>
+                                
+                                <a href="https://www.manualpdf.com.br/hyundai/sonata-2012/manual?p=226">Leia mais..</a>
                             </article>
                             <article>
                                 <h2>23 de Novembro -  Dia do Engenheiro Eletricista</h2>
