--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ Com sua combinação de estilo, conforto e tecnologia, o Sonata se destaca como 
                                     Além disso, o Azera costuma oferecer uma ampla gama de tecnologias embarcadas, incluindo sistemas avançados de entretenimento, segurança e conectividade, colocando-o no patamar dos sedans de luxo mais modernos.
                                     
                                     Com sua combinação de elegância, conforto e desempenho, o Hyundai Azera se destaca como uma opção atraente para quem busca sofisticação no segmento de sedans.</p>
-                                                                <a href="htO tps://vestibular.brasilescola.uol.com.br/noticias/dia-engenheiro-eletricista-profissao-pratica/355645.html">Leia mais..</a>
+                                                                <a href="https://www.manualpdf.com.br/hyundai/azera-2012/manual?p=8">Leia mais..</a>
                             </article>
                             <article>
                                 <h2>15 de Outubro - Dia dos "sofredores" digo, dos Professores</h2>
