--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@ Com sua combinação de estilo, conforto e tecnologia, o Sonata se destaca como 
                                                                 <a href="https://www.manualpdf.com.br/hyundai/azera-2012/manual?p=8">Leia mais..</a>
                             </article>
                             <article>
-                                <h2>15 de Outubro - Dia dos "sofredores" digo, dos Professores</h2>
+                                <h2>Honda Xre 300</h2>
                                 <span>Publicado: 15/10/2022</span>
                                 <img src="img/professores.jpg" alt="">
                                 <p>O dia 15 de outubro foi escolhido para comemorar o dia do professor, pois em 15 de outubro de 1827, Dom Pedro I, Imperador do Brasil, decretou uma Lei Imperial responsável pela criação do Ensino Elementar no Brasil (do qual chamou “Escola de Primeiras Letras”), e através deste decreto todas as cidades deveriam ter suas escolas de primeiro grau.</p>
-                                                                <a href="https://educacao.uol.com.br/datas-comemorativas/1015---dia-do-professor.htm">Leia mais..</a>
+                                                                <a href="https://www.honda.com.br/pos-venda/sites/customer_service_motos/files/manuais/MP%20XRE%20300%20ABS%20%282019%20-%202020%29%20D2203-MAN-1191_WEB_0.pdf">Leia mais..</a>
                             </article>    
                         </main>
                         <aside>
@@ -121,14 +121,14 @@ Com sua combinação de estilo, conforto e tecnologia, o Sonata se destaca como 
                             <div class="aside-item">
                                 <h2>Tags Populares</h2>
                                 <nav id="tags-popular">
-                                    <a href="#tag"> #diadaamazônia </a>
-                                    <a href="#tag">#5desetembro</a>
-                                    <a href="#tag">#diadoprofessor</a>
-                                    <a href="#tag">#numismática</a>
-                                    <a href="#tag">#vivermelhor</a>
-                                    <a href="#tag">#concursopublico</a>
-                                    <a href="#tag">#meucarronovo</a>
-                                    <a href="#tag">#halloween</a>
+                                    <a href="#tag"> #Honda Civic </a>
+                                    <a href="#tag">#Azera</a>
+                                    <a href="#tag">#Sonata</a>
+                                    <a href="#tag">#Xre300</a>
+                                    <a href="#tag">#chevetteSL</a>
+                                    <a href="#tag">#Maverick</a>
+                                    <a href="#tag">#meucarrodossonhos</a>
+                                    <a href="#tag">#carro</a>
                                 </nav>
 
                             </div>
