--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ Com sua combinação de estilo, desempenho e confiabilidade, o Honda Civic 2010 
                             <article>
                                 <h2>Hyundai Sonata 2012 </h2>
                                 <span>Publicado: em 2012</span>
-                                <img src="img/amaznia.jpg" alt="">
+                                <img src="img/571f699e1e41c216a62be15ec156145e.jpg" alt="">
                                 <p>O Sonata é um sedã que tem conquistado admiradores ao longo dos anos devido ao seu design elegante, conforto e tecnologia embarcada. Com linhas fluidas e uma presença marcante, o Sonata combina sofisticação com um toque esportivo, atraindo olhares por onde passa.
 
 No interior, o Sonata oferece um ambiente espaçoso e repleto de comodidades, proporcionando conforto tanto para o motorista quanto para os passageiros. Além disso, a atenção aos detalhes e a qualidade dos materiais utilizados reforçam a sensação de requinte a bordo.
@@ -87,7 +87,7 @@ Com sua combinação de estilo, conforto e tecnologia, o Sonata se destaca como 
                             <article>
                                 <h2>Honda Xre 300</h2>
                                 <span>Publicado: 15/10/2022</span>
-                                <img src="img/professores.jpg" alt="">
+                                <img src="img/honda-xre-300-2022.jpg" alt="">
                                 <p>A XRE 300 é uma motocicleta conhecida por sua versatilidade e desempenho robusto, oferecendo uma combinação impressionante de capacidade off-road e conforto em viagens urbanas. Fabricada pela Honda, a XRE 300 conquistou uma base de fãs dedicada devido à sua capacidade de lidar com uma variedade de condições de pilotagem.
 
                                     Com um design aventureiro e ergonomia pensada para longas jornadas, a XRE 300 oferece uma posição de pilotagem confortável e controle preciso. Seu motor potente proporciona torque em baixas rotações, tornando-a ágil tanto em estradas pavimentadas quanto em terrenos off-road desafiadores.
