--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ Com sua combinação de estilo, conforto e tecnologia, o Sonata se destaca como 
                             <article>
                                 <h2>Hyundai Azera 2012</h2>
                                 <span>Publicado: em 2012</span>
-                                <img src="img/dia-do-engenheiro-eletricista.jpg" alt="">
+                                <img src="img/transferir.jpg" alt="">
                                 <p>O Azera é um sedan de luxo fabricado pela Hyundai, conhecido por oferecer um equilíbrio impressionante entre desempenho, conforto e estilo. Com linhas elegantes e um design sofisticado, o Azera atrai olhares por onde passa, destacando-se pela sua presença marcante.
 
                                     No interior, o Azera oferece um ambiente requintado e espaçoso, repleto de comodidades que proporcionam conforto tanto para o motorista quanto para os passageiros. Materiais de alta qualidade e atenção aos detalhes contribuem para uma experiência luxuosa a bordo.
