--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ Com sua combinação de estilo, conforto e tecnologia, o Sonata se destaca como 
             </section>
             <footer>
                 <div class="container">
-                   <p><strong>Criado por: <a href="https://github.com/FernandoZanescoBoeira"> Pablo Eduardo</a><strong></p>
+                   <p><strong>Criado por: <a href="https://github.com/pablo041"> Pablo Eduardo</a><strong></p>
                 </div>
             </footer>
         </div>
