--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <main>
                             <article>
                                 <h2>Honda Civic 2010</h2>
-                                <span>Publicado: em 2010</span>
+                                <span>Lançado: em 2010</span>
                                 <img src="img/civic.jpeg" alt="">
                                 <p>O Honda Civic 2010 é um carro que conquistou muitos fãs ao longo dos anos devido à sua confiabilidade, estilo e desempenho. Com um design aerodinâmico e moderno, o Civic 2010 se destaca em termos de aparência e funcionalidade. Seu interior espaçoso e bem projetado oferece conforto tanto para o motorista quanto para os passageiros, tornando as viagens mais agradáveis.
 
@@ -53,7 +53,7 @@ Com sua combinação de estilo, desempenho e confiabilidade, o Honda Civic 2010 
                             </article>
                             <article>
                                 <h2>Hyundai Sonata 2012 </h2>
-                                <span>Publicado: em 2012</span>
+                                <span>Lançado: em 2012</span>
                                 <img src="img/571f699e1e41c216a62be15ec156145e.jpg" alt="">
                                 <p>O Sonata é um sedã que tem conquistado admiradores ao longo dos anos devido ao seu design elegante, conforto e tecnologia embarcada. Com linhas fluidas e uma presença marcante, o Sonata combina sofisticação com um toque esportivo, atraindo olhares por onde passa.
 
@@ -71,7 +71,7 @@ Com sua combinação de estilo, conforto e tecnologia, o Sonata se destaca como 
                             </article>
                             <article>
                                 <h2>Hyundai Azera 2012</h2>
-                                <span>Publicado: em 2012</span>
+                                <span>Lançado: em 2012</span>
                                 <img src="img/transferir.jpg" alt="">
                                 <p>O Azera é um sedan de luxo fabricado pela Hyundai, conhecido por oferecer um equilíbrio impressionante entre desempenho, conforto e estilo. Com linhas elegantes e um design sofisticado, o Azera atrai olhares por onde passa, destacando-se pela sua presença marcante.
 
@@ -86,7 +86,7 @@ Com sua combinação de estilo, conforto e tecnologia, o Sonata se destaca como 
                             </article>
                             <article>
                                 <h2>Honda Xre 300</h2>
-                                <span>Publicado: 15/10/2022</span>
+                                <span>Lançado: 2009</span>
                                 <img src="img/honda-xre-300-2022.jpg" alt="">
                                 <p>A XRE 300 é uma motocicleta conhecida por sua versatilidade e desempenho robusto, oferecendo uma combinação impressionante de capacidade off-road e conforto em viagens urbanas. Fabricada pela Honda, a XRE 300 conquistou uma base de fãs dedicada devido à sua capacidade de lidar com uma variedade de condições de pilotagem.
 
