--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ Com sua combinação de estilo, conforto e tecnologia, o Sonata se destaca como 
                         <aside>
                             <div class="aside-item" id="sobreMim">
                                 <h2>Sobre Mim</h2>
-                                <img src="img/file.jpg" alt="">
+                                <img src="img/WhatsApp Image 2024-04-07 at 20.52.32.jpeg" alt="">
                                 <h3>Pablo Eduardo Miranda Dos Santos</h3>
                                 <p>Nasci em 2007, tenho 2 irmãos mais novos, criado em um a família tradicional na região metropolitana de Curitiba.
                                     Completei o ensino fundamental e estou cursando terceiro ano do ensino médio em escola pública</p>
