--- a/index.html
+++ b/index.html
@@ -143,6 +143,13 @@ Com sua combinação de estilo, conforto e tecnologia, o Sonata se destaca como 
                         </aside>
                        
                     </div>
+                    <div class="aside-item" id="Sonata"></div>
+                    <h2> Hyundai Sonata</h2>
+                    <nav id=" video">
+                    <video controls>
+                        <source src="HYUNDAI SONATA REBAIXADO NAS ARO 20.mp4"> 
+                    </nav>
+                    </video>
                 </div>
             </section>
             <footer>
