--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                             <article>
                                 <h2>Honda Civic 2010</h2>
                                 <span>Lançado: em 2010</span>
-                                <img src="img/civic.jpeg" alt="">
+                                <img src="img/download.jpeg" alt="">
                                 <p>O Honda Civic 2010 é um carro que conquistou muitos fãs ao longo dos anos devido à sua confiabilidade, estilo e desempenho. Com um design aerodinâmico e moderno, o Civic 2010 se destaca em termos de aparência e funcionalidade. Seu interior espaçoso e bem projetado oferece conforto tanto para o motorista quanto para os passageiros, tornando as viagens mais agradáveis.
 
 Sob o capô, o Civic 2010 pode vir equipado com um motor de quatro cilindros que oferece uma boa combinação de economia de combustível e potência. Sua dirigibilidade ágil e responsiva torna a condução em áreas urbanas e rodovias uma experiência prazerosa.
@@ -147,7 +147,7 @@ Com sua combinação de estilo, conforto e tecnologia, o Sonata se destaca como 
                     <h2> Hyundai Sonata</h2>
                     <nav id=" video">
                     <video controls>
-                        <source src="HYUNDAI SONATA REBAIXADO NAS ARO 20.mp4"> 
+                        <source src="HYUNDAY SONATA REBAIXADO NAS ARO 20.mp4"> 
                     </nav>
                     </video>
                 </div>
