--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ Com sua combinação de estilo, conforto e tecnologia, o Sonata se destaca como 
                     <h2> Hyundai Sonata</h2>
                     <nav id=" video">
                     <video controls>
-                        <source src="HYUNDAY SONATA REBAIXADO NAS ARO 20.mp4"> 
+                        <source src="img/HYUNDAI SONATA REBAIXADO NAS ARO 20.mp4"> 
                     </nav>
                     </video>
                 </div>
